[package]
name = "text-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked-hash-map =  "0.5.6"
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.99"
uuid = { version = "1.4.0", default_features = false, features = ["v4"] }